<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">Aceptar</string>
    <string name="dialog_pin">Para poder utilizar el certificado introduzca su c\u00F3digo de seguridad.\n</string>
    <string name="security_code_hint">C\u00F3digo de seguridad.</string>
    <string name="dialog_can">Para poder leer los certificados introduzca su c\u00F3digo CAN.\n</string>

    <string name="cancel">Cancelar</string>
    <string name="pinrequest">Introduzca el PIN del DNIe</string>

    <string name="mobileoverdni">Sitúe su móvil sobre el DNIe</string>
    <string name="mobileoverdnilong">Coloque el DNIe sobre una superficie plana, coloque el móvil sobre él y procure evitar que ambos se muevan durante el proceso.</string>

    <string name="nfc_disabled">Su NFC esta deshabilitado ¿Desea habilitarlo para usar DNIe 3.0?</string>
    <string name="nfc_instructions">Coloque el dispositivo sobre el DNIe y no lo mueva durante la operaci\u00F3n de firma</string>

    <string name="app_name">MiFirma</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_button">Cargar Iniciativas</string>
    <string name="sign_button">Firmar</string>

    <string name="date_format">dd/MM/yy</string>

    <string name="provinces">Provincia donde está censado</string>
    <string name="locations">Localidad donde está censado</string>
    <string name="name">Tu nombre</string>
    <string name="surname_first">Tu primer apellido</string>
    <string name="surname_second">Tu segundo apellido</string>
    <string name="nif">Tu NIF (DNI + letra)</string>
    <string name="birthday">Fecha de Nacimiento (dd/mm/aaaa)</string>
    <string name="email">Tu email</string>
    <string name="terms">      Acepto los términos y condiciones.</string>
    <string name="termsWeb"><a href="https://www.mifirma.com/terms">https://www.mifirma.com/terms</a></string>

    <string name="electronic_sign">Firma electrónica</string>

    <string name="connection_msg">Comprueba tu conexión a Internet.</string>
    <string name="get_initiatives_error">No se pudo recuperar el listado de iniciativas.</string>
    <string name="get_initiatives_error_list">No se pudo actualizar el listado de iniciativas.</string>
    <string name="sign_error">No se pudo firmar la iniciativa.</string>

    <string name="loading">Cargando…</string>
    <string name="loadingNFC">Firma en curso. Por favor, no mueva ni DNI ni dispositivo.</string>

    <string name="error_msg_name">Debe introducir su nombre</string>
    <string name="error_msg_surname_first">Debe introducir su primer apellido</string>
    <string name="error_msg_surname_second">Debe introducir su segundo apellido</string>
    <string name="error_msg_nif">Su NIF no es valido</string>
    <string name="error_msg_birthday">Debe introducir su fecha de nacimiento</string>
    <string name="error_msg_email">No es un e-mail valido</string>
    <string name="error_msg_terms">Debe aceptar los terminos y condiciones</string>

    <string name="refresh">Refrescar</string>

    <string name="welcome_text">¡Bienvenido!\n\nPara utilizar esta aplicación necesita tener instalado en su dispositivo un <a href="http://firmaelectronica.gob.es/Home/Ciudadanos/Certificados-Electronicos.html">certificado\u00A0electrónico</a></string>
    <string name="success_button">Volver a pantalla principal</string>
    <string name="success_text">¡Iniciativa firmada con éxito!</string>
    <string name="action_nfc">Firma NFC</string>

    <string name="hint_nfc">Opcional si usa DNI NFC</string>



    <string-array name="provinces_list">

        <item>Albacete</item>
        <item>Alicante/Alacant</item>
        <item>Almería</item>
        <item>Araba/Álava</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Balears, Illes</item>
        <item>Barcelona</item>
        <item>Bizkaia</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón/Castelló</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Coruña, A</item>
        <item>Cuenca</item>
        <item>Gipuzkoa</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lleida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Palmas, Las</item>
        <item>Pontevedra</item>
        <item>Rioja, La</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia/València</item>
        <item>Valladolid</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>

</resources>
