<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.mifirma.android.fragments.InitiativeFormulary">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formulary_province_text"
            android:text="@string/provinces"
            android:visibility="gone"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formulary_province"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formulary_location_text"
            android:text="@string/provinces"
            android:visibility="gone"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formulary_location"
            android:layout_marginTop="5dp"
            android:visibility="gone">

        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:id="@+id/name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_first"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:id="@+id/surname_first"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname_second"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:id="@+id/surname_second"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nif"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/dni"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_gravity="center_horizontal"
            android:id="@+id/birthday"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:id="@+id/email"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:id="@+id/checkBox"
                android:checked="false"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termsWeb"
                android:layout_below="@id/checkBox"
                android:layout_alignEnd="@id/checkBox"
                android:layout_alignRight="@id/checkBox"
                android:layout_marginTop="-10dp"
                android:autoLink="web"/>
            </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronic_sign"
            android:id="@+id/electronic_sign_button"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"/>


    </LinearLayout>
</ScrollView>

</FrameLayout>
